@@ -2,3 +2,8 @@ H1
 {
   font-size: 18px;
 }
+
+.atkAttrRowHidden
+{
+  display: none !important;
+}
